project2/test/test_2_r09.out
Error type 9 at line 12: the function’s arguments mismatch the declared parameters
