project2/test/test_2_r09.out2
Error type 9 at Line 12: the function’s arguments mismatch the declared parameters
Error type 8 at Line 12: function return type is not matched
